footer: Fix alignment

--- a/assets/_scss/_custom.scss
+++ b/assets/_scss/_custom.scss
@@ -141,12 +141,13 @@ section {
   li {
     color: #83A3B6;
     margin-bottom: 0px;
+    min-width: 9rem;
   }
 
   .nav-item {
     float: left;
     // width: span(2);
-    margin-left: 5rem;
+    margin-left: 3.5rem;
   }
 
 
